@@ -2,6 +2,7 @@ KeePassDroid (0.4)
   * Support adding groups
 KeePassDroid (0.3.4)
   * Add context menus
+  * Deal with crash when resuming activity after the process has been killed
 
 KeePassDroid (0.3.3)
   * Add new icon and UI enhancements from Francis Jacquerye
